dont specify particular directory for custom apache logs

--- a/etc/httpd-alerta.conf
+++ b/etc/httpd-alerta.conf
@@ -8,8 +8,8 @@ WSGISocketPrefix /var/run/wsgi
     WSGIDaemonProcess alerta user=alerta group=alerta processes=5 threads=5
     WSGIScriptAlias / /opt/alerta/apache/app.wsgi
 
-    ErrorLog /var/log/httpd/alerta-error.log
-    CustomLog /var/log/httpd/alerta-access.log common
+    # ErrorLog logs/alerta-error.log
+    # CustomLog logs/alerta-access.log common
 
     <Directory /opt/alerta>
         WSGIProcessGroup alerta
