add oembed json endpoint for severity counts
oembed working

fix formatting

label to title, fix container

set default to json

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -2,4 +2,5 @@ exclude .gitignore
 global-exclude *.pyc
 include alerta/app/app.wsgi
 recursive-include alerta/app/templates *
+recursive-include alerta/app/static *
 
