--- a/contrib/apache/httpd-alerta.conf
+++ b/contrib/apache/httpd-alerta.conf
@@ -1,4 +1,5 @@
 Listen 8080
+WSGISocketPrefix /var/run/wsgi
 <VirtualHost *:8080>
   ServerName localhost
   WSGIDaemonProcess alerta processes=5 threads=5
@@ -11,5 +12,5 @@ Listen 8080
 <VirtualHost *:80>
   ProxyPass /api http://localhost:8080
   ProxyPassReverse /api http://localhost:8080
-  DocumentRoot /var/www/alerta/app
+  DocumentRoot /var/www
 </VirtualHost>
