--- a/.travis.yml
+++ b/.travis.yml
@@ -7,4 +7,4 @@ python:
 install: "pip install -r requirements.txt"
 
 # command to run tests
-script: nosetests tests/test_alert.py tests/test_status.py
+script: nosetests tests/test_alerts.py tests/test_auth.py tests/test_heartbeats.py
