--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,8 @@ language: python
 python:
   - "2.6"
   - "2.7"
+  
+services: mongodb
 
 # command to install dependencies
 install: "pip install -r requirements.txt"
