--- a/.travis.yml
+++ b/.travis.yml
@@ -14,5 +14,5 @@ install:
   - "pip install -r requirements.txt"
 
 # command to run tests
-script: nosetests tests/test_alerts.py tests/test_auth.py tests/test_heartbeats.py
+script: nosetests tests/test_alerts.py tests/test_auth.py tests/test_heartbeats.py tests/test_metrics.py
 
