--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,9 @@
-gunicorn
-cffi
-alerta-slack
--e .
+Flask==0.10.1
+Flask-Cors==2.1.3
+pymongo>=3.0
+argparse
+requests
+python-dateutil
+pytz
+PyJWT
+bcrypt
