--- a/.travis.yml
+++ b/.travis.yml
@@ -1,12 +1,15 @@
 language: python
 python:
   - "2.7"
-  - "3.4"
   - "3.5"
 
-services: mongodb
+env:
+  - DB=mongodb DATABASE_URL=mongodb://localhost:27017/alerta5
+  - DB=postgres DATABASE_URL=postgres://localhost:5432/alerta5
 
-sudo: false
+services:
+  - mongodb
+  - postgresql
 
 addons:
   apt:
@@ -14,6 +17,11 @@ addons:
     - mongodb-3.0-precise
     packages:
     - mongodb-org-server
+  postgresql: "9.5"
+
+before_script:
+  - sh -c "if [ '$DB' = 'postgres' ]; then psql -c 'DROP DATABASE IF EXISTS alerta5;' -U postgres; fi"
+  - sh -c "if [ '$DB' = 'postgres' ]; then psql -c 'CREATE DATABASE alerta5;' -U postgres; fi"
 
 # command to install dependencies
 install:
@@ -22,4 +30,3 @@ install:
 
 # command to run tests
 script: nosetests tests/*
-
