--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -4,7 +4,7 @@ include NOTICE
 include README.md
 exclude .gitignore
 global-exclude *.pyc
-include alerta/app/app.wsgi
-include alerta/app/sql/schema.sql
-recursive-include alerta/app/templates *
-recursive-include alerta/app/static *
+include alerta/app.wsgi
+include alerta/sql/schema.sql
+recursive-include alerta/templates *
+recursive-include alerta/static *
