--- a/.travis.yml
+++ b/.travis.yml
@@ -27,4 +27,4 @@ install:
   - "pip install ."
   - "pip install -r requirements.txt"
 
-script: nosetests tests/*
+script: nosetests --verbosity=3 tests/*
