Pre commit hooks 2 (#649)
* More pre-commit fixes

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -3,15 +3,15 @@ repos:
     rev: v1.4.0
     hooks:
     -   id: autopep8-wrapper
-#    -   id: check-added-large-files
-#    -   id: check-ast
-#    -   id: check-byte-order-marker
-#    -   id: check-case-conflict
-#    -   id: check-docstring-first
-#    -   id: check-json
-#    -   id: check-merge-conflict
-#    -   id: check-yaml
-#    -   id: debug-statements
+    -   id: check-added-large-files
+    -   id: check-ast
+    -   id: check-byte-order-marker
+    -   id: check-case-conflict
+    -   id: check-docstring-first
+    -   id: check-json
+    -   id: check-merge-conflict
+    -   id: check-yaml
+    -   id: debug-statements
 #    -   id: double-quote-string-fixer
 #    -   id: end-of-file-fixer
 #    -   id: flake8
