--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -12,7 +12,7 @@ repos:
     -   id: check-merge-conflict
     -   id: check-yaml
     -   id: debug-statements
-#    -   id: double-quote-string-fixer
+    -   id: double-quote-string-fixer
 #    -   id: end-of-file-fixer
 #    -   id: flake8
 #    -   id: fix-encoding-pragma
