--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -13,16 +13,16 @@ repos:
     -   id: check-yaml
     -   id: debug-statements
     -   id: double-quote-string-fixer
-#    -   id: end-of-file-fixer
+    -   id: end-of-file-fixer
 #    -   id: flake8
-#    -   id: fix-encoding-pragma
-#        args: ['--remove']
-#    -   id: pretty-format-json
-#        args: ['--autofix']
-#    -   id: name-tests-test
-#        args: ['--django']
-#    -   id: requirements-txt-fixer
-#    -   id: trailing-whitespace
+    -   id: fix-encoding-pragma
+        args: ['--remove']
+    -   id: pretty-format-json
+        args: ['--autofix']
+    -   id: name-tests-test
+        args: ['--django']
+    -   id: requirements-txt-fixer
+    -   id: trailing-whitespace
 -   repo: https://github.com/asottile/pyupgrade
     rev: v1.6.0
     hooks:
