Remove Python2.7 imports

--- a/.isort.cfg
+++ b/.isort.cfg
@@ -1,2 +1,2 @@
 [settings]
-known_third_party = bcrypt,bson,click,dateutil,flask,flask_compress,flask_cors,itsdangerous,jwt,ldap,pkg_resources,psycopg2,pymongo,pytz,raven,requests,saml2,setuptools,six,telepot,urlparse,werkzeug
+known_third_party = bcrypt,bson,click,dateutil,flask,flask_compress,flask_cors,itsdangerous,jwt,ldap,pkg_resources,psycopg2,pymongo,pytz,raven,requests,saml2,setuptools,six,telepot,werkzeug
