Add endpoints for bulk update, tag, untag and delete alerts

--- a/mypy.ini
+++ b/mypy.ini
@@ -21,6 +21,12 @@ ignore_missing_imports = True
 [mypy-psycopg2.*]
 ignore_missing_imports = True
 
+[mypy-celery.*]
+ignore_missing_imports = True
+
+[mypy-kombu.*]
+ignore_missing_imports = True
+
 [mypy-saml2.*]
 ignore_missing_imports = True
 
