--- a/mypy.ini
+++ b/mypy.ini
@@ -21,6 +21,9 @@ ignore_missing_imports = True
 [mypy-psycopg2.*]
 ignore_missing_imports = True
 
+[mypy-pyparsing.*]
+ignore_missing_imports = True
+
 [mypy-celery.*]
 ignore_missing_imports = True
 
