--- a/.travis.yml
+++ b/.travis.yml
@@ -26,7 +26,7 @@ before_script:
 install:
   - pip install .
   - pip install -r requirements.txt
-  - pip install mypy==0.620
+  - pip install -r requirements-dev.txt
 
 script:
   - python -m mypy alerta/
