Added prometheus_flask_exporter in mypy.ini

--- a/mypy.ini
+++ b/mypy.ini
@@ -38,3 +38,7 @@ ignore_missing_imports = True
 
 [mypy-blinker.*]
 ignore_missing_imports = True
+
+[mypy-prometheus_flask_exporter]
+ignore_missing_imports = True
+
