--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,13 @@
-bcrypt==3.1.4
+bcrypt==3.1.6
 Flask==1.0.2
 Flask-Compress==1.4.0
-Flask-Cors==3.0.6
-psycopg2==2.7.5
-PyJWT==1.6.4
-pymongo==3.7.1
+Flask-Cors==3.0.7
+psycopg2==2.7.7
+PyJWT==1.7.1
+pymongo==3.7.2
 pyparsing==2.3.1
-python-dateutil==2.7.3
-pytz==2018.5
-pyyaml==3.13
-raven[flask]==6.9.0
-requests==2.19.1
+python-dateutil==2.8.0
+pytz==2018.9
+pyyaml==4.2b1
+raven[flask]==6.10.0
+requests==2.20.0
