--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,28 @@
+asn1crypto==0.24.0
 bcrypt==3.1.6
+blinker==1.4
+certifi==2019.3.9
+cffi==1.12.2
+chardet==3.0.4
+Click==7.0
+cryptography==2.6.1
 Flask==1.0.2
 Flask-Compress==1.4.0
 Flask-Cors==3.0.7
+idna==2.8
+itsdangerous==1.1.0
+Jinja2==2.10.1
+MarkupSafe==1.1.1
 psycopg2==2.8.1
+pycparser==2.19
 PyJWT==1.7.1
 pymongo==3.7.2
-pyparsing==2.3.1
+pyparsing==2.4.0
 python-dateutil==2.8.0
-pytz==2018.9
-pyyaml==4.2b1
-raven[flask]==6.10.0
-requests==2.20.0
+pytz==2019.1
+PyYAML==5.1
+raven==6.10.0
+requests==2.21.0
+six==1.12.0
+urllib3==1.24.1
+Werkzeug==0.15.2
