--- a/.isort.cfg
+++ b/.isort.cfg
@@ -1,2 +1,2 @@
 [settings]
-known_third_party = bcrypt,blinker,bson,celery,click,dateutil,flask,flask_compress,flask_cors,itsdangerous,jwt,kombu,ldap,pkg_resources,psycopg2,pymongo,pyparsing,pytz,raven,requests,requests_mock,saml2,setuptools,six,telepot,werkzeug,yaml
+known_third_party = blinker,bson,click,dateutil,flask,flask_compress,flask_cors,itsdangerous,jwt,ldap,pkg_resources,psycopg2,pymongo,pyparsing,pytz,raven,requests,requests_mock,setuptools,six,werkzeug,yaml
