--- a/requirements.txt
+++ b/requirements.txt
@@ -3,7 +3,7 @@ cryptography==2.6.1
 Flask==1.0.2
 Flask-Compress==1.4.0
 Flask-Cors==3.0.7
-psycopg2==2.8.1
+psycopg2-binary==2.8.3
 PyJWT==1.7.1
 pymongo==3.7.2
 pyparsing==2.4.0
