Make tox tests work when run locally

--- a/tox.ini
+++ b/tox.ini
@@ -1,16 +1,33 @@
 [tox]
-envlist = py36,py37,py38
+envlist = py{36,37,38}-{postgres,mongodb}
 skip_missing_interpreters=true
 
 [testenv]
 deps =
   pytest
   requests_mock
-  psycopg2
-  pymongo
+  postgres: psycopg2
+  mongodb: pymongo
 
+[testenv:postgres]
+whitelist_externals =
+  createdb
+  dropdb
+commands_pre =
+  - createdb alerta
 commands = pytest -s {posargs} tests
+commands_post =
+  - dropdb alerta
+
 #passenv = *
 setenv =
   ALERTA_SVR_CONF_FILE =
   DATABASE_URL = postgres:///alerta
+
+[testenv:mongodb]
+commands = pytest -s {posargs} tests
+
+#passenv = *
+setenv =
+  ALERTA_SVR_CONF_FILE =
+  DATABASE_URL = mongodb://127.0.0.1:27017/alerta
