--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -6,6 +6,9 @@ on:
   pull_request:
     branches: [ master ]
 
+env:
+  SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
+
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -31,3 +34,10 @@ jobs:
         run: docker login $REPOSITORY_URL --username "$DOCKER_USERNAME" --password "$DOCKER_PASSWORD"
       - name: Publish Image
         run: docker push $REPOSITORY_URL/$IMAGE_NAME
+
+      - name: Notify Slack
+        uses: alerta/actions/notify-slack@master
+        with:
+          status: ${{ job.status }}
+          fields: repo,message,commit,diff,author,action,issue,eventName,ref,workflow
+        if: always()
