Add boolean operators AND,OR,NOT to query syntax

--- a/tox.ini
+++ b/tox.ini
@@ -1,33 +1,27 @@
 [tox]
-envlist = py{36,37,38}-{postgres,mongodb}
+envlist = py{37}-{mongodb,postgres}
 skip_missing_interpreters=true
 
 [testenv]
 deps =
   pytest
   requests_mock
-  postgres: psycopg2
   mongodb: pymongo
+  postgres: psycopg2
 
-[testenv:postgres]
 whitelist_externals =
   createdb
   dropdb
+  pytest
+
 commands_pre =
-  - createdb alerta
-commands = pytest -s {posargs} tests
+  postgres: -createdb alerta
+commands = pytest -s {posargs:tests}
 commands_post =
-  - dropdb alerta
+  postgres: -dropdb alerta
 
 #passenv = *
 setenv =
   ALERTA_SVR_CONF_FILE =
-  DATABASE_URL = postgres:///alerta
-
-[testenv:mongodb]
-commands = pytest -s {posargs} tests
-
-#passenv = *
-setenv =
-  ALERTA_SVR_CONF_FILE =
-  DATABASE_URL = mongodb://127.0.0.1:27017/alerta
+  mongodb: DATABASE_URL = mongodb://127.0.0.1:27017/alerta
+  postgres: DATABASE_URL = postgres:///alerta
