--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -4,7 +4,7 @@ include NOTICE
 include README.md
 exclude .gitignore
 global-exclude *.pyc
-include alerta/app.wsgi
+include wsgi.py
 include alerta/sql/schema.sql
 recursive-include alerta/templates *
 recursive-include alerta/static *
