--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -5,6 +5,7 @@ include README.md
 exclude .gitignore
 global-exclude *.pyc
 include wsgi.py
+include alerta/app.wsgi
 include alerta/sql/schema.sql
 recursive-include alerta/templates *
 recursive-include alerta/static *
