Add test skeleton for LDAP auth

--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist = py{37}-{mongodb,postgres}
+envlist = py{37}-{mongodb,postgres}-{basic,ldap}
 skip_missing_interpreters=true
 
 [testenv]
@@ -8,6 +8,7 @@ deps =
   requests_mock
   mongodb: pymongo
   postgres: psycopg2
+  ldap: python-ldap
 
 whitelist_externals =
   createdb
