--- a/.travis.yml
+++ b/.travis.yml
@@ -18,7 +18,11 @@ services:
   - postgresql
 
 addons:
-  postgresql: "9.6"
+  postgresql: "12"
+  apt:
+    packages:
+      - postgresql-12
+      - postgresql-client-12
 
 before_script:
   - sh -c "if [ '$DB' = 'postgres' ]; then psql -c 'DROP DATABASE IF EXISTS alerta;' -U postgres; fi"
