--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist = py{37}-{mongodb,postgres}-{basic,ldap}
+envlist = py{37}-{mongodb,postgres}
 skip_missing_interpreters=true
 
 [testenv]
@@ -8,7 +8,7 @@ deps =
   requests_mock
   mongodb: pymongo
   postgres: psycopg2
-  ldap: python-ldap
+  python-ldap
 
 whitelist_externals =
   createdb
