--- a/.github/workflows/github-ci.yml
+++ b/.github/workflows/github-ci.yml
@@ -114,6 +114,14 @@ jobs:
         image: rroemhild/test-openldap
         ports:
           - 389:389
+      saml-idp:
+        image: jamedjo/test-saml-idp
+        ports:
+          - 9443:8443
+          - 9080:8080
+        env:
+          SIMPLESAMLPHP_SP_ENTITY_ID: http://localhost:8080
+          SIMPLESAMLPHP_SP_ASSERTION_CONSUMER_SERVICE: http://localhost:8080/auth/saml
 
     steps:
       - uses: actions/checkout@v2
@@ -123,7 +131,8 @@ jobs:
             build-essential \
             python3-dev \
             libldap2-dev \
-            libsasl2-dev
+            libsasl2-dev \
+            xmlsec1
       - name: Set up Python 3.x
         uses: actions/setup-python@v2
         with:
@@ -136,7 +145,7 @@ jobs:
           pip install flake8 pytest
           pip install -r requirements.txt
           pip install -r requirements-dev.txt
-          pip install python-ldap
+          pip install python-ldap pysaml2 lxml
           pip install .
       - name: Integration Test with pytest
         id: integration-test
