--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,8 @@
 bcrypt==3.2.0
+blinker==1.4
 cryptography==3.2.1
 Flask==1.1.2
-Flask-Compress==1.7.0
+Flask-Compress==1.8.0
 Flask-Cors==3.0.9
 mohawk==1.1.0
 psycopg2==2.8.6
@@ -13,4 +14,4 @@ pytz==2020.4
 PyYAML==5.3.1
 requests==2.24.0
 requests_hawk==1.0.1
-sentry-sdk[flask]===0.19.1
+sentry-sdk[flask]===0.19.2
