--- a/.github/workflows/github-ci.yml
+++ b/.github/workflows/github-ci.yml
@@ -140,6 +140,7 @@ jobs:
       - uses: actions/checkout@v2
       - name: Install packages
         run: |
+          sudo apt-get update
           sudo apt-get install -y \
             build-essential \
             python3-dev \
