Only notify slack if failure

--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -13,10 +13,6 @@ jobs:
       IMAGE_NAME: ${{ github.repository_owner }}/alerta-api
       SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
     steps:
-      - uses: act10ns/slack@v1
-        with:
-          status: starting
-        if: always()
       - name: Checkout
         uses: actions/checkout@v2
       - name: Variables
@@ -42,4 +38,4 @@ jobs:
         with:
           status: ${{ job.status }}
           steps: ${{ toJson(steps) }}
-        if: always()
+        if: failure()
