--- a/.github/workflows/github-ci.yml
+++ b/.github/workflows/github-ci.yml
@@ -65,7 +65,7 @@ jobs:
         with:
           status: ${{ job.status }}
           steps: ${{ toJson(steps) }}
-        if: always()
+        if: failure()
 
   test-mongodb:
     runs-on: ubuntu-latest
@@ -113,7 +113,7 @@ jobs:
         with:
           status: ${{ job.status }}
           steps: ${{ toJson(steps) }}
-        if: always()
+        if: failure()
 
   test-integration:
     runs-on: ubuntu-latest
@@ -171,4 +171,4 @@ jobs:
         with:
           status: ${{ job.status }}
           steps: ${{ toJson(steps) }}
-        if: always()
+        if: failure()
