fix(build): run tests against correct branch

--- a/.github/workflows/github-ci.yml
+++ b/.github/workflows/github-ci.yml
@@ -2,8 +2,8 @@ name: CI Tests
 
 on:
   push:
-    branches: [ master ]
-  pull_request_target:
+    branches: [ master, release/* ]
+  pull_request:
     branches: [ master ]
 
 env:
