build(deps): bump package requirements

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,17 +1,17 @@
 bcrypt==3.2.0
 blinker==1.4
-cryptography==3.2.1
+cryptography==3.4.6
 Flask==1.1.2
-Flask-Compress==1.8.0
-Flask-Cors==3.0.9
+Flask-Compress==1.9.0
+Flask-Cors==3.0.10
 mohawk==1.1.0
 psycopg2==2.8.6
-PyJWT==2.0.0
-pymongo==3.11.1
+PyJWT==2.0.1
+pymongo==3.11.3
 pyparsing==2.4.7
 python-dateutil==2.8.1
-pytz==2020.4
-PyYAML==5.3.1
-requests==2.25.0
-requests_hawk==1.0.1
-sentry-sdk[flask]===0.19.2
+pytz==2021.1
+PyYAML==5.4.1
+requests==2.25.1
+requests_hawk==1.1.0
+sentry-sdk[flask]==0.20.3
